Extracted the user shouting to its own class for testability and good OOP.